--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/styles.css">
-  <link rel="shortcut" href="favicon.ico">
+  <link rel="shortcut icon" href="favicon.ico">
   <title>AOD - Bicycle Company</title>
 </head>
 <body>
